welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:2: error: type mismatch;
 found   : Int
 required: Boolean
	if (a<b<c && equalOk=false || a<=b<=c && equalOk=true) {
                ^