welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.code
def inOrderEqual(a:Int, b:Int, c:Int, equalOk:Boolean):Boolean = {
	if (a<b<c && equalOk=false || a<=b<=c && equalOk=true) {
		return true
	}
	else {
		return false
	}
}
